# cpd

./: .gitignore  Cargo.toml  Readme.md  bacon.toml  graphs.txt  graphs_small.txt
.github/workflows/: release.yml
src/: cpd.rs  data.rs  main.rs
src/cpd/: candidate_generation.rs  candidate_matching.rs  candidates.rs  config.rs  graph_matching.rs  pattern_matching.rs
src/data/: edge.rs  graph.rs  utils.rs  vertex.rs
test_data/: graphs.txt  graphs_big.txt  graphs_sim.txt  graphs_small.txt
